--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,28 @@
 ---
 layout: default
-title: Site
+title: Notitanic
 ---
 
-Hello!
+<div class="intro">
+    <div class="container">
+        <div class="intro__inner">
+            <div class="intro__content">
+                <h2 class="intro__suptitle">Hello</h2>
+                <h1 class="intro__title">I'm Gleb<br>Kostrubov</h1>
+                <h2 class="intro__subtitle">I've been doing web design, front-end and back-end development for a year now. Do you need a website design, site layout, or maybe a turnkey website? Then contact me</h2>
+                <a class="intro__link" href="#">Contact me</a>
+            </div>
+            <div class="intro__img">
+                <img src="assets/images/intro.png" alt="intro">
+                <h2 class="intro__tag-one">Ps</h2>
+                <h2 class="intro__tag-two">Ux</h2>
+                <div class="intro__tag-three">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37" fill="none">
+                        <path d="M0.0546875 15.7949V21.1035L15.1016 28.4512V22.9492L5.13477 18.4492L15.1016 13.9668V8.46484L0.0546875 15.7949ZM34.3145 0.976562L18.2656 36.0449H23.8027L39.8516 0.976562H34.3145Z" fill="#00C4F0"/>
+                    </svg>
+                </div>
+                <h2 class="intro__tag-four">UI</h2>
+            </div>
+        </div>
+    </div>
+</div>
