added about top

--- a/src/index.html
+++ b/src/index.html
@@ -26,3 +26,66 @@ title: Notitanic
         </div>
     </div>
 </div>
+
+<div class="about">
+    <div class="container  container--no">
+        <div class="about__inner">
+            <section class="about__windows">
+                <div class="about__windows-top">
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <img src="assets/images/pen.svg" alt="icon">
+                            <p class="about__window-text">Product Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <h2 class="about__window-title">UX/UI</h2>
+                            <p class="about__window-text">UX/UI Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <img src="assets/images/menu-svg.svg" alt="icon">
+                            <p class="about__window-text">Icon Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <img src="assets/images/carbon_logo-delicious.svg" alt="icon">
+                            <p class="about__window-text">Logo Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                </div> <!-- /.about__windows-top -->
+                <div class="about__windows-bottom">
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <img src="assets/images/bx_bx-code-alt.svg" alt="icon">
+                            <p class="about__window-text">Product Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <img src="assets/images/bx_bx-code-alt.svg" alt="icon">
+                            <p class="about__window-text">UX/UI Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                    <a class="about__window" href="#">
+                        <div class="about__window-content">
+                            <img src="assets/images/ic_baseline-auto-awesome-motion.svg" alt="icon">
+                            <p class="about__window-text">Icon Design</p>
+                        </div>
+                        <span class="about__window-shadow"></span>
+                    </a>
+                </div>
+            </section>
+            <section class="about__content">2</section>
+        </div> <!-- /.about__inner -->
+    </div> <!-- /.container -->
+</div> <!-- /.about -->
