--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@ title: Notitanic
     </div> <!-- /.container -->
 </section> <!-- /.intro -->
 
-<section class="about">
+<section class="about" id="about">
     <div class="container  container--no">
         <div class="about__inner">
             <div class="about__windows">
@@ -115,7 +115,7 @@ title: Notitanic
     </div> <!-- /.container -->
 </section> <!-- /.about -->
 
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
     <div class="container">
         <div class="portfolio__inner">
             <h2 class="portfolio__title">Portfolio</h2>
